2020-03-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

	* docker/ci-3.4/Dockerfile: Added
	* docker/ci-3.5/Dockerfile: Idem
	* docker/ci-dev/Dockerfile: Idem

	* .travis.yml (jobs): Expand to matrix

2020-03-22  Mattias Ellert  <mattias.ellert@physics.uu.se>

	* inst/include/Rcpp/exceptions_impl.h: Add include guard,
	Make sure RCPP_DEMANGLER_ENABLED is always defined,
	Add missing inline qualifier

2020-03-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

	* inst/include/Rcpp/lang.h: Define Rcpp_list{2,3,4,5} in the Rcpp
	namespace

	* DESCRIPTION: Remove versioned depends on R (>= 3.0.0) from 2013

2020-03-17  Davis Vaughan  <davis@rstudio.com>

	* inst/include/Rcpp/lang.h: Inline Rcpp_list6() to support R 3.3.

2020-03-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version (twice)
        * inst/include/Rcpp/config.h: Idem

        * inst/NEWS.Rd: Updated

2020-03-15  Kevin Ushey  <kevinushey@gmail.com>

	* inst/include/Rcpp/exceptions_impl.h: Ensure <execinfo.h> is included
	into global namespace; refactor detection of demangler support

2020-03-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 1.0.4

        * inst/include/Rcpp/config.h: Idem
        * inst/NEWS.Rd: Idem
        * vignettes/rmd/Rcpp.bib: Idem
        * inst/bib/Rcpp.bib: Idem

2020-03-12  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/rmd/Rcpp.bib: Updated to current package versions
	* inst/bib/Rcpp.bib: Idem

2020-02-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/exceptions_impl.h: Remove spurious semicolon

2020-02-23  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/generated/Vector__create.h: Added #nocov tags
	* inst/include/Rcpp/exceptions_impl.h: Idem
	* src/api.cpp: Idem plus some whitespace realignment
