@@ -1,3 +1,7 @@
+2020-03-23  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml (script): Run coverage as parallel step
+
 2020-03-22  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor version
